--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>1069</width>
-    <height>698</height>
+    <width>952</width>
+    <height>515</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -40,7 +40,7 @@
            <item>
             <widget class="QGroupBox" name="groupBox">
              <property name="title">
-              <string>JJJ</string>
+              <string>Number of each task:</string>
              </property>
              <layout class="QVBoxLayout" name="verticalLayout">
               <item>
@@ -227,7 +227,7 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>1069</width>
+     <width>952</width>
      <height>25</height>
     </rect>
    </property>
